application/base/raspberry/jellyseerr/backendtrafficpolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: jellyseerr-timeout
  namespace: jellyseerr
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: jellyseerr
  timeout:
    http:
      requestTimeout: 120s
