application/base/raspberry/jellyseerr/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyseerr
  namespace: jellyseerr
spec:
  parentRefs:
    - name: raspberry-gateway
      namespace: envoy-gateway-system
      sectionName: seerr
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyseerr-seerr-chart
          port: 5055
